--- a/anelli.tex
+++ b/anelli.tex
@@ -533,8 +533,7 @@ Riassumiamo in uno schemino tutte le relazioni legate alla divisibilità:
 	Osserviamo innanzitutto che ha senso parlare di grado minimo, poiché l'immagine del grado è un sottoinsieme non vuoto dei naturali.
 	
 	Se $ x $ è invertibile, per ogni $ a \in A $ non nullo
-	\[ d(x) \leq d(x) d(ax^{-1}) \leq d(x \cdot ax^{-1}) = d(a) \]
-	e se per sbaglio $ d(ax^{-1}) = 0 $, allora lo stesso vale per il grado di $ x^{-1} $ e quindi di $ x $.
+	\[ d(x) \leq d(x \cdot ax^{-1}) = d(a). \]
 	
 	Viceversa, sia $ x $ un elemento di grado minimo e $ a $ un elemento qualunque. Abbiamo che
 	\[ a = qx + r \]
